--- a/app/pages/tasks.css
+++ b/app/pages/tasks.css
@@ -20,28 +20,12 @@ li{
 #taskForm{
     background-color: black;
 }
-#saveButton{
-    margin: 5px;
-    background-color: rgb(101, 97, 232);
-    border-radius: 5px;
-
-}
-
-#taskDescription{
-    margin: 5px;
-    border-radius: 5px;
-}
 
 #taskName{
     margin: 5px;
     border-radius: 5px;
 }
 
-#card{
-    background-color: rgb(32, 32, 32);
-    color: white;
-    border-radius: 15px;
-}
 
 #deleteButton{
     background-color: rgb(118, 59, 59);
@@ -49,9 +33,30 @@ li{
     margin-right: 5px;
 }
 
-#editButton{
-    background-color: rgb(59, 118, 86);
-    color: white;
-    margin-left: 5px;
+
+#saveTask{
+    margin: 5px;
+    background-color: rgb(101, 97, 232);
+    border-radius: 5px;
 }
 
+#saveTask:hover{
+    background-color: rgb(38, 239, 115);
+
+}
+
+.task{
+    background-color: rgb(32, 32, 32);
+    margin-bottom: 5px;
+    margin-top: 5px;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 10px;
+
+}
+
+.task:hover{
+    background-color: rgb(149, 149, 149);
+    cursor: pointer;
+
+}
